--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Aguilar Web Development</title>
+		<title>The Crypto Savages</title>
 	</head>
 	<body>
 		<div id="app"></div>
